# omni-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  friendly-operator-completion-response-intent-snapshot.md  new-project-workspace-task-run-intent-snapshot.md
.antigravitycli/: 72e3714d-f2ea-49ba-afeb-055d6521f4d7.json
_bmad/: config.toml  config.user.toml
_bmad-output/: agents-config-ux-intent-snapshot.md  project-context.md
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  state.rs
backend/src/agent/: claude.rs  codex.rs  mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 1_init.sql  2_add_task_seq_unique.sql  3_add_project_workspace_path.sql
backend/src/handlers/: agent_config.rs  comments.rs  mod.rs  projects.rs  runs.rs  sessions.rs  tasks.rs
backend/src/models/: agent_config.rs  comment.rs  mod.rs  project.rs  run.rs  session.rs  task.rs
backend/src/services/: agent_config.rs  comments.rs  mod.rs  projects.rs  runs.rs  sessions.rs  tasks.rs
backend/tests/: comments_test.rs  projects_test.rs  runs_test.rs  sessions_test.rs  tasks_test.rs
backend/tests/fixtures/: mock-agent-fail.sh  mock-agent-noisy.sh  mock-agent-stderr.sh  mock-agent.sh  mock-codex-cli.sh
docs/: ARCHITECTURE.md  FEATURE_INTAKE.md  GLOSSARY.md  HARNESS.md  HARNESS_BACKLOG.md  README.md  TEST_MATRIX.md  task-detail-editor-workbench-execution-handoff.md  task-detail-editor-workbench-intent-snapshot.md  task-detail-editor-workbench-mock.html  task-detail-terminal-transcript-intent-snapshot.md
e2e/: omni.spec.ts  package-lock.json  package.json  (+1 more)
(+282 files in other folders)
